# slobs-virtual-cam

./: .gitmodules  CMakeLists.txt  README.md
ci/: perms.bat
mac/: CMakeLists.txt  install-plugin.sh  install.sh  vcam-output.cpp  vcam.hpp  vcam.mm
mac/data/locale/: en-US.ini
mac/vcam-assistant/: CMakeLists.txt  assistant.cpp  assistant.hpp  main.cpp
mac/vcam-ipc/: CMakeLists.txt
mac/vcam-ipc/include/: signal.h  vcam-ipc-client.hpp  vcam-ipc-constants.h  vcam-ipc-server.hpp  vcam-ipc.hpp
mac/vcam-ipc/src/: vcam-ipc-client.mm  vcam-ipc-server.mm  vcam-ipc.mm
mac/vcam-plugin/: CMakeLists.txt  Info.plist
mac/vcam-plugin/include/: clock.hpp  device.hpp  object.hpp  objectinterface.hpp  objectproperties.hpp  plugininterface.hpp  stream.hpp  util.h
mac/vcam-plugin/src/: clock.cpp  device.cpp  main.cpp  object.cpp  objectinterface.cpp  objectproperties.cpp  plugininterface.cpp  stream.cpp  util.cpp
mac/vcam-utils/: CMakeLists.txt
mac/vcam-utils/include/: logger.h
mac/vcam-utils/src/: logger.cpp
